--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsWidget/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsWidget/Index.cshtml
@@ -194,7 +194,7 @@
                                                                                 @*@wZone.WidgetOrder*@
                                                                                 @w.Title @{
                                                                                         var lang = "";
-                                                                                        if (GlobalConfig.WebSite.IsMultiLangual)
+                                                                                        if (GlobalContext.WebSite.IsMultiLangual)
                                                                                         {
                                                                                             lang = string.IsNullOrEmpty(w.Language) ? " ( All )" : " ( " + w.Language + " )";
                                                                                         }
