--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_Header.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_Header.cshtml
@@ -16,7 +16,7 @@
 
         <!-- Zone TOP Start-->
         <div id="topMenu" class="topMenu pull-right">
-            @if (GlobalConfig.WebSite.IsMultiLangual == true)
+            @if (GlobalContext.WebSite.IsMultiLangual == true)
             {
                 @await Html.PartialAsync("_SelectLanguagePartial")
             }
