--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_HomeLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_HomeLayout.cshtml
@@ -34,7 +34,7 @@
     <!-- Full Width Slider Start -->
     <div>
         @{
-            var fullWidthSlider = ThemeHelper.GetLayoutZoneWebsiteWidgets(ThemeResources.Layouts.FullWidthLayout, ThemeResources.Zones.FullWidthSlider);
+            var fullWidthSlider = ThemeHelper.GetWebsiteWidgets(ThemeResources.Layouts.FullWidthLayout, ThemeResources.Zones.FullWidthSlider);
             if (fullWidthSlider != null && fullWidthSlider.Count > 0)
             {
                 <div class="fullWidthSlider">
