--- a/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
@@ -90,7 +90,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 @*<a class="navbar-brand" href="index.html">SB Admin v2.0</a>*@
-                <a asp-area="" asp-controller="Admin" asp-action="Index" class="navbar-brand">@GlobalConfig.WebSite.Name Admin</a>
+                <a asp-area="" asp-controller="Admin" asp-action="Index" class="navbar-brand">@GlobalContext.WebSite.Name Admin</a>
             </div>
             <!-- /.navbar-header -->
             <ul class="nav navbar-top-links navbar-right">              
