--- a/NetCoreCMS.Web/Views/Shared/_SelectLanguagePartial.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_SelectLanguagePartial.cshtml
@@ -26,7 +26,7 @@
         returnUrl = returnUrl + WebUtility.UrlDecode(qStr);
     }
     var lang = "";
-    if (GlobalConfig.WebSite.IsMultiLangual)
+    if (GlobalContext.WebSite.IsMultiLangual)
     {
         lang = "/" + currentLanguage;
     }
